@startuml osborneairlines

Object <|-- Passenger
Object <|-- Airport
Object <|-- Flight



class Passenger implements Comparable{
    -String 
}

class ReservationMain{
    -String _airportfilepath
    -String _flightfilepath
    -String _reservationfilepath
    -ArrayList _flights
    -ArrayList _reservations
    -ArrayList _airports 
    -enum DataType

    -void ReadFile()
    -void WriteFile()
    -void main()
    -void mainmenu()
    -void printmenu()
    -void savemenu()
    -void reservationmenu()
    -void flightmenu()
    -void passengermenu()
    -void airportmenu()
    -int ReadMenuInput()
    -void PrintList()


}
class ReservationMain
note left: This is a main class that is responsible for running UI





class Passenger implements Comparable{
    -String _firstname
    -String _lastname

    int compareTo()
    Passenger FindPassenger()
    ArrayList<Reservation> FindReservationForPassenger()
    ArrayList<Passenger> FindPassengersForFlight()
    Passenger Ux_CreatePassenger()

}

class Flight implements Comparable{
    -Airport _departureairport
    -Airport _arrivalairport
    -FlightDate _flightdate
    -int _capacity

    -int compareTo()
    +Flight FindFlight()
    +Flight Ux_CreateFlight()
}

class FlightDate{
    -ZonedDateTime _utcdeparturetime
    -ZonedDateTime _utcarrivaltime
    -LocalDateTime _localdeparturetime
    -LocalDateTime _localarrivaltime
    -Duration _d

}



class Reservation implements Comparable{

    ArrayList<Passenger> _passengerlist
    Flight _flight
    String _reservationnumber

    int compareTo()
    Reservation FindReservation()
    Reservation Ux_CreateReservation()

}

class Airport implements Comparable {
    private String _name;
    private String _city;
    private String _state;
    private String _timezoneid;

    int compareTo()
    Airport FindAirport()
    Aiport Ux_FindAirport()
    Aiport Ux_CreateAirport()
    Aiport Ux_DeleteAirport()
}
class Airport
note left: represents airport. All UX methods handle specific UX for that class




@enduml